2009-12-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-host-method-from-timeline-spec)
	(twittering-get-timeline-spec): Add more timeline specification.

2009-12-22  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-ucs-to-char): turned into
	function from macro
	(twittering-update-lambda, twittering-update-jojo): more portable
	string expression. Executable only in Japanese environment.

2009-12-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-icon-path): `require' is added.
	(twittering-tinyurl-get, twittering-retrieve-image-without-wget):
	The dependency on `mm-url' is removed by using `url' library.
	(twittering-http-application-headers):
	`Content-Length' is added to `headers'.

2009-12-20  Tadashi Matsuo  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el (timeline-spec): add tests for
	timeline specification.
	* twittering-mode.el (twittering-get-host-method-from-timeline-spec)
	(twittering-get-timeline-spec): Add new functions for timeline
	specification.
	(twittering-update-mode-line): Shows timeline specification.
	(twittering-render-timeline): Invokes
	`twittering-update-mode-line' to update the mode-line.
	(twittering-timeline-history): Add new variable for history of
	timeline specifications.
	(twittering-add-timeline-history): Add new function for adding
	timeline history.
	(twittering-http-get-default-sentinel): Invokes
	`twittering-add-timeline-history' to update history when
	retrieving tweets successfully.
	(twittering-other-user-list-interactive): The codes for retrieving
	list index synchronously are extracted as the new function
	`twittering-get-list-sync'.
	(twittering-get-list-index-sync): Add new function for retrieving
	list synchronously.
	(twittering-read-list-name): Add new function for reading a list
	name from the minibuffer.
	(twittering-read-timeline-spec-with-completion): Add new function